-implement orm (to be continue)